Updates to header/footer. -Removes a console log. -Fixes header on mobile. -Fixes icons for footer.

--- a/themes/dyami/assets/scss/user-stylesheets/_dev.scss
+++ b/themes/dyami/assets/scss/user-stylesheets/_dev.scss
@@ -65,7 +65,7 @@ footer {
 					margin-bottom: 25px; 
 					cursor: pointer;  
 
-					i { color: #ffffff; }
+					i { color: #ffffff; font-size:24px; }
 				}
 				ul li:last-child { padding-right: 0px; }
 			}
